# ceng-407-408-2024-2025-Sentinel-Autonomous-Discovery-Vehicle

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug-report.md
ROSArduinoBridge/: ROSArduinoBridge.ino  diff_controller.h  encoder_driver.h  encoder_driver.ino  motor_driver.h
ball_tracker/: package.xml  setup.py
ball_tracker/ball_tracker/: detect_ball.py  detect_ball_3d.py  follow_ball.py  process_image.py
ball_tracker/config/: ball_tracker_params_robot.yaml
ball_tracker/launch/: ball_tracker.launch.py
camera_tunnel/: package.xml  setup.cfg  setup.py
camera_tunnel/camera_tunnel/: camera_publisher.py  udp_socket.py
documents/word/: Software Requirements Specification.docx  Software Requirements Specification_Updated _(408).docx  Test Plan Document.docx  WorkPlan.docx  WorkPlan_408.docx
image_publisher/: CMakeLists.txt  package.xml
image_publisher/src/: camera.cpp  camera.hpp  image_publisher.cpp  image_publisher.hpp  main.cpp  observer.cpp  observer.hpp
mapping/: setup.py
mapping/config/: mapper_params_online_async.yaml
mapping/launch/: mapping.launch.py  rgbd_mapping.launch.py  slam_toolbox.mapping.launch.py
mapping/result/: map_one_serial.data
model/: CMakeLists.txt  package.xml
model/config/: ros2_controllers.yaml  ros2_controllers_robot.yaml
model/description/: camera.xacro  lidar.xacro  others.xacro  rgbd_camera.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  wheels.xacro
model/launch/: rsp.launch.py
movement/launch/: movement.launch.py
movement/movement/: joystick.py
public/models/: sentinel.glb
sentinel.computer/: docker-compose.yml  requirements.txt
sentinel.computer/src/camera_subscriber/: package.xml  setup.py
sentinel.computer/src/camera_tunnel/: package.xml
sentinel.computer/src/manual_movement/: package.xml  setup.py
sentinel.computer/src/mapping/: package.xml  setup.py
sentinel.computer/src/message_interfaces/: CMakeLists.txt  package.xml
sentinel.computer/src/movement/: package.xml  setup.py
sentinel.computer/src/object_detection/: package.xml  setup.cfg  setup.py
sentinel.computer/src/path_finder/: package.xml  setup.py
sentinel.computer/src/path_finder_interfaces/: CMakeLists.txt  package.xml
sentinel.computer/src/sentinel/: package.xml
sentinel.computer/src/simulation/: CMakeLists.txt  package.xml  setup.py
sentinel.computer/src/skid_steer_controller/: CMakeLists.txt  package.xml  skid_steer_plugin.xml
sentinel.computer/src/skid_steer_controller/include/skid_steer_controller/: odometry.hpp
sentinel.computer/src/skid_steer_controller/src/: skid_steer_controller_parameter.yaml
sentinel.computer/src/skid_steering_plugin/: CMakeLists.txt  package.xml
sentinel.computer/src/skid_steering_plugin/include/skid_steering/: skid_steering_plugin.hh
sentinel.computer/src/skid_steering_plugin/src/: skid_steering_plugin.cc
sentinel.vehicle/camera/: CMakeLists.txt
sentinel.vehicle/camera/include/: camera.hpp  camera_publisher.hpp  observer.hpp  udp_socket.hpp
sentinel.vehicle/camera/src/: camera.cpp  camera_publisher.cpp  main.cpp  observer.cpp  udp_socket.cpp
sentinel.vehicle/src/camera_publisher/: CMakeLists.txt  package.xml
sentinel.vehicle/src/camera_publisher/include/base64/: base64.hpp
sentinel.vehicle/src/camera_publisher/include/camera/: camera.hpp  camera_publisher.hpp  constants.hpp
sentinel.vehicle/src/camera_publisher/src/: camera.cpp  camera_publisher.cpp  main.cpp  observer.cpp  udp_socket.cpp
sentinel.vehicle/src/movement/: package.xml  setup.py
sentinel.vehicle/src/sentinel/: CMakeLists.txt  package.xml
sentinel.vehicle/src/sentinel_hardware_interface/: CMakeLists.txt  package.xml  sentinel_hardware_interface.xml
sentinel.vehicle/src/sentinel_hardware_interface/include/sentinel_hardware_interface/: raspberrypi_commands.hpp  sentinel_hardware_interface.hpp  visibility_control.h  wheel.hpp
sentinel.vehicle/src/sentinel_hardware_interface/src/: raspberrypi_commands.cpp  sentinel_hardware_interface.cpp  wheel.cpp
sentinel.vehicle/src/start_vehicle/: package.xml  setup.cfg  setup.py
skid_steer_controller/include/skid_steer_controller/: skid_steer_controller.hpp  speed_limiter.hpp
skid_steer_controller/src/: odometry.cpp  skid_steer_controller.cpp
src/: App.tsx  index.css  main.tsx
src/components/joystickComponent/: JoystickComponent.tsx
src/components/keyboardComponent/: KeyboardComponent.tsx
src/components/lidarComponent/: LidarComponent.tsx
src/components/windComponent/: WindComponent.tsx
src/constants/: mapPaletteConstants.ts  styleConstants.ts  themeConstants.ts
src/containers/appBarContainer/: AppBarContainer.css  AppBarContainer.tsx  NotificationList.tsx
src/containers/appContainer/: AppContainer.tsx
src/containers/cameraContainer/: CameraContainer.css  CameraContainer.tsx  CameraFullScreenButton.tsx  DetectionFrameEnableButton.tsx
src/containers/directionContainer/: CarModel.tsx  DirectionContainer.tsx  FollowCamera.tsx  Road.tsx  RobotModel.tsx  Scene.tsx  WindParticles.tsx
src/containers/mapContainer/: MapContainer.tsx
src/containers/movementContainer/: MovementContainer.tsx
src/containers/reportGenerator/: ReportGenerator.tsx  ReportGeneratorStyles.tsx  ReportTemplate.tsx
src/definitions/: 3dObjectsTypeDefinition.ts  actionTypeDefinitions.ts  applicationTypeDefinitions.ts  componentTypeDefinitions.ts  notificationTypeDefinitions.ts  reportGeneratorTypeDefinitions.ts  themeDefinitions.ts  twoDimensionalMapTypeDefinitions.ts
src/dialogs/: DetectedObjectDetailsDialog.tsx  MissionTypeDialog.tsx  ReportViewDialog.tsx
src/dialogs/DetectedObjectDetailsDialog/: DetectedObjectDetailsDialog.tsx
src/sentinel/: CMakeLists.txt  package.xml
src/sentinel/config/: simulation.rviz
src/sentinel/description/: camera.xacro  gazebo.xacro  lidar.xacro  others.xacro  robot.urdf.xacro  robot_core.xacro  wheels.xacro
src/store/: hooks.ts  mainStore.ts
src/utils/: FetchObjectData.tsx  RosContext.tsx  road.ts
(+72 files in other folders)
